# addris

./: .gitignore  OVERVIEW.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/v1/: addresses.py  jobs.py  routes.py
backend/app/core/: config.py  logging.py
backend/app/domain/: address.py  geocoding.py  geometry.py  image.py  optimization.py  text.py
backend/app/ocr/: pipeline.py
backend/app/parsing/: address_parser.py  validation.py
backend/app/routing/: optimizer.py
backend/app/schemas/: extraction.py  jobs.py
backend/app/services/: address_service.py  distance.py  geocoding.py  job_service.py  llm.py  models.py  ocr.py  parsing.py  pipeline.py  repository.py  routing.py  storage.py
backend/data/: jobs.db
backend/tests/: test_address_extraction_service.py  test_address_parser.py  test_address_validation.py  test_geocoding_helpers.py  test_job_service.py  test_repository.py  test_routes_api.py  test_routing.py
mobile/: App.js  README.md  app.json  package-lock.json  package.json
mobile/src/api/: addris.js
mobile/src/components/: ActionButtons.js  ActiveImageCard.js  EmptyState.js  HeroCard.js  ImagePreviewStrip.js  LocationCard.js  ProcessingBanner.js  RouteSummaryModal.js  StatusPills.js  StopsModal.js
